# DiamondViewer

./: .env  .gitignore  .replit  DEPLOYMENT.txt  Harbor_Diamond_Viewer_PC_Control.ino  INTEGRATION_GUIDE.md  LattePanda_Diamond_Viewer.ino  Manual.md  README.md  WIRELESS_CONTROL_GUIDE.md  arduino_controller.py  arduino_example.ino  diamond_viewer.py  display_viewer.py  main.py  pyproject.toml  replit.md  requirements.txt  web_server.py
Setup/: set_static_ip.ps1  setup.bat  setup_portable.bat  start_display.bat  start_webserver.bat
attached_assets/: Harbor_Diamond_Viewer_Steppers_v1.0_1761751685147.ino  diamond_viewer_1761846459001.py
deployment/: LATTEPANDA_SETUP.md  SECURITY.md  start_display.bat  start_web_server.bat
src/: __init__.py  arduino_controller.py  camera_widget.py  diamond_viewer.py
templates/: control.html  share.html
